<resources>
    <string name="app_name">My Application_kyohon</string>
    <string name="price_label">定価</string>
    <string name="discount_label">割引率</string>
    <string name="calculate_button">計算する</string>
    <string name="price">price_hint</string>
    <string name="discount">discount_hint</string>
    <string name="price_error">定価を入力してください</string>
    <string name="discount_error">割引率を入力してください。</string>
    <string name="expression">%1$,3d円の%2$%%引きは</string>
    <string name="result">%1$,3d円です</string>
</resources>
